# agentic_agnostic_orchestrator_VF

./: .dockerignore  .env.example  .gitignore  CHECKIN_OUT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TL_HANDOFF.md
control-plane/: .dockerignore  Dockerfile  alembic.ini  conftest.py  pyproject.toml
control-plane/ai_runtime/: __init__.py  context_window.py  generation.py  glm_client.py  models.py
control-plane/ai_runtime/tests/: __init__.py  test_generation_context.py  test_glm_client.py
control-plane/app/: __init__.py  audit.py  dependencies.py  main.py  main_consolidated.py  migrations.py  schemas.py  security.py  settings.py
control-plane/app/adapters/: __init__.py  antigravity.py  base.py  codex.py  gemini.py  kiro.py  scrape_adapter.py  scrape_models.py  scrape_parser.py  (+1 more)
control-plane/core/: __init__.py  interfaces.py  models.py  router.py
control-plane/coupling/: __init__.py  hm_client.py  manager.py  models.py  wiring.py
control-plane/data_lake/: __init__.py  client.py  ml_optimization.py
control-plane/executors/: __init__.py  events.py  router.py  socket.py  terminal.py
control-plane/finops/: __init__.py  bridge.py  engine.py  metrics.py  models.py  repository.py  schema.py
control-plane/inbox_api/: __init__.py  models.py  repository.py  router.py  schema.py
control-plane/issues_api/: __init__.py  models.py  repository.py  router.py  schema.py
control-plane/llm_gateway/: __init__.py  router.py  service.py
control-plane/messaging/: __init__.py  service.py
control-plane/orchestrator/: __init__.py  techlead.py
control-plane/projects_api/: __init__.py  models.py  repository.py  router.py  schema.py
control-plane/rag_pipeline/: __init__.py  router.py  service.py
control-plane/registry/: __init__.py  models.py  propagation.py  repository.py  schema.py  service.py
control-plane/rotation/: __init__.py  assembly.py  auth.py  detector.py  models.py  pool.py  service.py  trigger.py
control-plane/scheduler/: __init__.py  backoff.py  quota.py  scheduler.py
control-plane/seats/: pool.py
control-plane/seats_api/: __init__.py  repository.py  router.py  schema.py
control-plane/sessions_api/: __init__.py  repository.py  router.py  schema.py  service.py
control-plane/settings_api/: __init__.py  models.py  repository.py  router.py  schema.py
control-plane/squad_api/: __init__.py  router.py
control-plane/tasks_api/: __init__.py  models.py  reconciler.py  repository.py  router.py  schema.py
control-plane/tests/: test_adapters.py
control-plane/topology/: mapper.py  repository.py
control-plane/tracing/: __init__.py  metrics.py  models.py  repository.py  schema.py  service.py
herdmaster/: .gitignore  CHANGELOG.md  QA_EXECUTION_REPORT_v1.0.0.md  QUICKSTART_pt-BR.md  README.md  RELEASE_NOTES_v1.0.0_pt-BR.md  gh_login.py  kiro_output_dump.txt  pyproject.toml
herdmaster/.git_disabled/: FETCH_HEAD  ORIG_HEAD  config  index
herdmaster/config/: herdmaster.example.toml
herdmaster/deploy/: README.md  herdmaster.service  install.sh
herdmaster/docs/: ADR-001_acoplamento_Herdr_HerdMaster.md  AGENT_REGISTRY.md  API_REFERENCE.md  BACKLOG.md  CLI_REFERENCE_pt-BR.md  COMMUNICATION_PROTOCOL.md  E2E_ARCHITECTURE_ANIMATED.html  E2E_ARCHITECTURE_OPERATIONS_pt-BR.md  GSD_MANDATORY_PROTOCOL.md  HERDR_CONFIG_OFICIAL.md  HERDR_INTEGRATIONS_OFICIAL.md  HERDR_SOCKET_API_OFICIAL.md  OPS_RUNBOOK.md  RCA_ISSUE_001_to_005.md  TECHNICAL_DESIGN.md  TROUBLESHOOTING.md  USER_MANUAL_PROJECT_ORCHESTRATION_pt-BR.md  architecture.html  architecture_deep.html  architecture_macro.html  architecture_micro.html  super_skills_agentic_catalog.md
herdmaster/ops/: bootstrap.sh
herdmaster/scratch/: audit_full.sh  audit_full_v2.sh  audit_prompts.sh  check_birthtime.sh  diag.sh  diag2.sh  get_pane_names.sh  get_timestamps.ps1  pipeline_status.py  pipeline_status.sh  status_query.py  submit_project.sh  timestamps.sh
herdmaster/scripts/: qa_core.py
herdmaster/tests/: conftest.py  test_acl.py  test_acl_edge_cases.py  test_agent_mgmt.py  test_api.py  test_bus.py  test_bus_api.py  test_bus_load.py  test_cli.py  test_config.py  test_config_herdr.py  test_db.py  test_dispatch.py  test_dispatch_integration.py  test_e2e.py  test_herdr.py  test_herdr_live.py  test_project.py  test_queue_property.py  test_tasks_lifecycle.py  test_watchdog.py
ops/: start.sh  (+18 more)
(+546 files in other folders)
