[tool.poetry]
name = "aop-control-plane"
version = "1.5.0"
description = "Agnostic Orchestration Platform (AOP) - Core Control Plane Engine"
authors = ["AOP Platform Engineering <engineering@aop.internal>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core Framework
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = {extras = ["email"], version = "^2.7.2"}
pydantic-settings = "^2.3.1"

# Database & Data Layer
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
redis = "^5.0.4"

# Networking & Telemetry
httpx = "^0.27.0"
prometheus-client = "^0.20.0"

# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# AI Ecosystem Integration SDKs
openai = "^1.30.5"
anthropic = "^0.28.0"
google-generativeai = "^0.5.4"
boto3 = "^1.34.118"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
ruff = "^0.4.5"
mypy = "^1.10.0"

[tool.poetry.scripts]
# Exposes simplified CLI terminal commands natively utilizing Poetry wraps
dev = "uvicorn app.main_consolidated:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn app.main_consolidated:app --host 0.0.0.0 --port 8000 --workers 4"
migrate = "python -m app.migration.migrator upgrade"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
