[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herdmaster"
version = "1.0.0"
description = "Real-time multi-agent orchestration control plane for Herdr."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "HerdMaster Contributors" }
]
dependencies = [
  "typer",
  "rich",
  "structlog",
  "psycopg[binary]>=3.3,<3.4"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio"
]

[project.scripts]
herdmaster = "herdmaster.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
markers = [
    "integration: live Herdr tests (skipped without real socket)",
]

